# auto-report

./: .gitignore  README.md  pyproject.toml
scripts/: create_element.py
src/auto_report/: __init__.py  convert.py  elements.py  report.py  utils.py
tests/: test_elements.py
