[project]
name = "auto-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Elisabeth Sandbakken", email = "elsandb.code@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
auto-report = "auto_report:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
